# pybind11-examples

./: README.md  setup.py
PEP443/: README.md  example.py
decorator/: CMakeLists.txt  README.md  funUser.py  mydecorator.cpp
embed/: CMakeLists.txt  README.md  embed.cpp
multimod/: .gitignore  CMakeLists.txt  PyProvider.cpp  PyUser.cpp  README.md  example.py  provider.cpp  provider.hpp
ownership/: .gitignore  CMakeLists.txt  ownership.cpp
ownership/Test.py/: Test.py.py  Test.py.pyproj
ownership/pybind11/: CMakeLists.txt
pybind_add/: README.md  pybind_add.cpp
pybind_functions/: CMakeLists.txt  README.md  pybind_functions.cpp
pybind_functions/pybind11/: CMakeLists.txt
pypackage/: .gitignore  CMakeLists.txt  README.md  setup.py
tank/: CMakeLists.txt  README.md  tank.cpp
typehints/: CMakeLists.txt  README.md  example.py  mytype.cpp  mytype.pyi  mytypeuser.py
